Added insta and updated teams tab

--- a/static/html/sections/about.html
+++ b/static/html/sections/about.html
@@ -7,166 +7,172 @@
 {% endblock %}
 
 {% block content %}
-        <div class = "medium-type">
-            <h1> medium is a
-                <span class = "txt-type" data-wait= "3000" data-speed = "100" data-words='["community of students who want to engage with design ",
+<div class="medium-type">
+    <h1> medium is a
+        <span class="txt-type" data-wait="3000" data-speed="100" data-words='["community of students who want to engage with design ",
                 "playground to foster innovation and experimentation",
                 "link between creative individuals, campus organizations, and the design industry",
-                "resource for developing design thinking and design skills"]' ></span>
-            </h1>
+                "resource for developing design thinking and design skills"]'></span>
+    </h1>
+</div>
+
+<div class="our-story">
+    <div class="our-story__img our-story__right" style="background-image: url('{% static 'imgs/pam.jpg' %}');"></div>
+    <div class="our-story__text-wrap left">
+        <div class="our-story__text">
+            <h2> our story</h2>
+            <br />
+            <h5>medium (n.)
+                <br />
+                an agency or a means to do something
+            </h5>
+            <br />
+            Medium was founded in 2015 by 3 AAP students who decided to transform a design publication into a live
+            event.
+            Together, they created RAW Expo, a design exhibition in which students from all across campus showcased
+            their work.
+            The event was a huge hit - 500+ attendees proved that there was an incredible amount of interest in and need
+            for an
+            interdisciplinary design group. From RAW, Medium Design Collective spawned, to become a community of
+            designers who
+            collaborate on innovative projects and serve as a platform and resource for design dialogue.
         </div>
+    </div>
+</div>
 
-        <div class = "our-story">
-            <div class = "our-story__img our-story__right" style="background-image: url('{% static 'imgs/pam.jpg' %}');"></div>
-            <div class = "our-story__text-wrap left">
-                    <div class= "our-story__text">
-                        <h2> our story</h2>
-                        <br/>
-                        <h5>medium (n.)
-                            <br />
-                            an agency or a means to do something
-                        </h5>
-                            <br/>
-                            Medium was founded in 2015 by 3 AAP students who decided to transform a design publication into a live event.
-                            Together, they created RAW Expo, a design exhibition in which students from all across campus showcased their work.
-                            The event was a huge hit - 500+ attendees proved that there was an incredible amount of interest in and need for an
-                            interdisciplinary design group. From RAW, Medium Design Collective spawned, to become a community of designers who
-                            collaborate on innovative projects and serve as a platform and resource for design dialogue.
-                    </div>
-                </div>
-            </div>
-
-        <div class = "our-mission" style="background-image: url('{% static 'imgs/story.jpg' %}');">
-            <div class = "our-mission-info">
-                <center>
-                    <h2 class = "mission-border"> our mission</h2>
-                    <br />
-                    To build an interdisciplinary collective of individuals, as a platform for engaging in
-                        dialogue and collaboration about design.
-                </center>
-            </div>
-        </div>
+<div class="our-mission" style="background-image: url('{% static 'imgs/story.jpg' %}');">
+    <div class="our-mission-info">
+        <center>
+            <h2 class="mission-border"> our mission</h2>
+            <br />
+            To build an interdisciplinary collective of individuals, as a platform for engaging in
+            dialogue and collaboration about design.
+        </center>
+    </div>
+</div>
 
 
-        <div class= "guiding-principles" style="background-image: url('{% static 'imgs/mediumbckgrnd.jpg' %}');">
-            <h2> guiding <br /> principles</h2>
-            <div class = "guiding-principles-info">
-                <div class = "guiding-principles-detail">
-                    <b>take initiative.</b>
-                        <br />
-                        There’s no hand holding here. We celebrate self-starters,
-                        those who are brave enough to forge their own paths.
-
-                </div>
-                <div class = "guiding-principles-detail">
-                    <b>open your mind.</b>
-                        <br />
-                        True innovation starts when one sees the world differently
-                        from the layman. Opportunities are everywhere, if you observe
-                        carefully.
-
-                </div>
-                <div class = "guiding-principles-detail">
-                    <b>better together.</b>
-                        <br />
-                        Through collaboration and peer crits, we benefit from one
-                        another’s diverse expertise by seeing in ways we wouldn’t
-                        have before.
-
-                </div>
-                <div class = "guiding-principles-detail">
-                    <b>stay humble.</b>
-                        <br />
-                        A designer’s teacher is the user. Assume nothing,
-                        and always consider different perspectives.
-
-                </div>
-                <div class = "guiding-principles-detail">
-                    <b>design & deliver.</b>
-                        <br />
-                        It’s more than just ideas, it’s about making it a reality.
-                        We hold one another accountable to our commitments and responsibilities.
-
-                </div>
-                <div class = "guiding-principles-detail">
-                    <b>assume good.</b>
-                        <br />
-                        Everyone’s trying their best. Be understanding of one
-                        another’s situations and treat each other with kindness.
-
-                </div>
-            </div>
-        </div>
-
-        <div class = "our-capacity">
-            <div class = "our-capacity-name">
-                <h6>our capacity</h6>
-            </div>
-
-            <div class = "our-capacity-info">
-                <div class = "our-capacity-detail">
-                    <h4>spatial <br />design</h4>
-                </div>
-                <div class = "our-capacity-detail">
-                    <h4>exhibition <br />design</h4>
-                </div>
-                <div class = "our-capacity-detail">
-                    <h4>product <br />design</h4>
-                </div>
-                <div class = "our-capacity-detail">
-                    <h4>event <br />design</h4>
-                </div>
-                <div class = "our-capacity-detail">
-                    <h4>website <br />design</h4>
-                </div>
-                <div class = "our-capacity-detail">
-                    <h4>marketing <br /> & branding</h4>
-                </div>
-                <div class = "our-capacity-detail">
-                    <h4>entrepreneurship</h4>
-                </div>
-                <div class = "our-capacity-detail">
-                    <h4>app <br />design</h4>
-                </div>
-                <div class = "our-capacity-detail">
-                    <h4>graphic <br />design</h4>
-                </div>
-                <div class = "our-capacity-detail">
-                    <h4>design <br />strategy</h4>
-                </div>
-                <div class = "our-capacity-detail">
-                    <h4>ux <br />design</h4>
-                </div>
-            </div>
+<div class="guiding-principles" style="background-image: url('{% static 'imgs/mediumbckgrnd.jpg' %}');">
+    <h2> guiding <br /> principles</h2>
+    <div class="guiding-principles-info">
+        <div class="guiding-principles-detail">
+            <b>take initiative.</b>
+            <br />
+            There’s no hand holding here. We celebrate self-starters,
+            those who are brave enough to forge their own paths.
 
         </div>
+        <div class="guiding-principles-detail">
+            <b>open your mind.</b>
+            <br />
+            True innovation starts when one sees the world differently
+            from the layman. Opportunities are everywhere, if you observe
+            carefully.
 
-        <!-- <div class = "our-sponsors">
+        </div>
+        <div class="guiding-principles-detail">
+            <b>better together.</b>
+            <br />
+            Through collaboration and peer crits, we benefit from one
+            another’s diverse expertise by seeing in ways we wouldn’t
+            have before.
+
+        </div>
+        <div class="guiding-principles-detail">
+            <b>stay humble.</b>
+            <br />
+            A designer’s teacher is the user. Assume nothing,
+            and always consider different perspectives.
+
+        </div>
+        <div class="guiding-principles-detail">
+            <b>design & deliver.</b>
+            <br />
+            It’s more than just ideas, it’s about making it a reality.
+            We hold one another accountable to our commitments and responsibilities.
+
+        </div>
+        <div class="guiding-principles-detail">
+            <b>assume good.</b>
+            <br />
+            Everyone’s trying their best. Be understanding of one
+            another’s situations and treat each other with kindness.
+
+        </div>
+    </div>
+</div>
+
+<div class="our-capacity">
+    <div class="our-capacity-name">
+        <h6>our capacity</h6>
+    </div>
+
+    <div class="our-capacity-info">
+        <div class="our-capacity-detail">
+            <h4>spatial <br />design</h4>
+        </div>
+        <div class="our-capacity-detail">
+            <h4>exhibition <br />design</h4>
+        </div>
+        <div class="our-capacity-detail">
+            <h4>product <br />design</h4>
+        </div>
+        <div class="our-capacity-detail">
+            <h4>event <br />design</h4>
+        </div>
+        <div class="our-capacity-detail">
+            <h4>website <br />design</h4>
+        </div>
+        <div class="our-capacity-detail">
+            <h4>marketing <br /> & branding</h4>
+        </div>
+        <div class="our-capacity-detail">
+            <h4>entrepreneurship</h4>
+        </div>
+        <div class="our-capacity-detail">
+            <h4>app <br />design</h4>
+        </div>
+        <div class="our-capacity-detail">
+            <h4>graphic <br />design</h4>
+        </div>
+        <div class="our-capacity-detail">
+            <h4>design <br />strategy</h4>
+        </div>
+        <div class="our-capacity-detail">
+            <h4>ux <br />design</h4>
+        </div>
+    </div>
+
+</div>
+
+<!-- <div class = "our-sponsors">
             <h2>our sponsors</h2>
             <div class = "sponsors-img">
                 <img src = "{% static 'imgs/adobe.png' %}" />
             </div>
         </div> -->
 
-        <div class = "join-us" id = "joinus">
-            <div class = "join-us__img join-us__left" style = "background-image: url('{% static 'imgs/joinus.jpg' %}');"></div>
-            <div class = "join-us__text-wrap right">
-                    <div class = "join-us__text">
-                        <h2>join us</h2>
-                        <h5>
-                        Email: mediumdesigncollective@gmail.com
-                        <br />
-                        Facebook: <a href="https://www.facebook.com/mediumdesigncollective/">Medium Design Collective</a>
-                        </h5>
-                    </div>
-                </div>
-            </div>
-
-        <div class = "end-m">
-            <center>
-                <h3><b>- m -</b></h3>
-            </center>
+<div class="join-us" id="joinus">
+    <div class="join-us__img join-us__left" style="background-image: url('{% static 'imgs/joinus.jpg' %}');"></div>
+    <div class="join-us__text-wrap right">
+        <div class="join-us__text">
+            <h2>join us</h2>
+            <h5>
+                Email: mediumdesigncollective@gmail.com
+                <br />
+                Facebook: <a href="https://www.facebook.com/mediumdesigncollective/">Medium Design Collective</a>
+                <br />
+                Instagram: <a href="https://www.instagram.com/mediumdesign/">@mediumdesign</a>
+            </h5>
         </div>
+    </div>
+</div>
+
+<div class="end-m">
+    <center>
+        <h3><b>- m -</b></h3>
+    </center>
+</div>
 {% endblock %}
 
 {% block scripts %}
