--- a/static/html/sections/teams.html
+++ b/static/html/sections/teams.html
@@ -9,72 +9,62 @@
 {% block content %}
 <div class="narrative">
     <div class="narrative__wrap">
-        <div class="narrative__img narrative__left" style="background-image: url('{% static 'imgs/incubate.jpg' %}');"></div>
+        <div class="narrative__img narrative__left" style="background-image: url('{% static 'imgs/incubate.jpg' %}');">
+        </div>
         <div class="narrative__text-wrap right">
             <div class="narrative__title"></div>
             <div class="narrative__text">
-                <div class="narrative__title">incubate projects.</div>
-                Starting in Fall 2019, Medium is launching incubate projects.
-                They are created by our incubate teams, groups of 3-5 who are looking
-                to create things that solve a problem, bring new perspectives, or address
-                a pressing gap. Projects follow the design process and are themed to
-                address the topics of the creative direction of that year. These projects
-                can be anything from creating <a href="https://www.jialinke.com/pulse">
-                an interactive exhibition</a> that relates pulse with music therapy to
-                <a href="http://shiro.community/"> a website </a>of visualizations to
-                inspire discussions about life.
+                <div class="narrative__title">incubates</div>
+                is for people who want to ideate, develop, and execute design
+                projects within a challenging yet supportive creative team. This
+                team involves flexible projects - the subject matter, timeline,
+                and team itself are up to you. You'll be supported by our design
+                director Sheri to flesh out ideas, stay on track, and get any
+                other help you'll need.
             </div>
         </div>
     </div>
     <div class="narrative__wrap">
-        <div class="narrative__img narrative__right" style="background-image: url('{% static 'imgs/events.jpg' %}');"></div>
+        <div class="narrative__img narrative__right" style="background-image: url('{% static 'imgs/events.jpg' %}');">
+        </div>
         <div class="narrative__text-wrap left">
             <div class="narrative__text">
-                <div class="narrative__title">events.</div>
-                Medium hosts a variety of design events during the academic year.
-                These events can include design panels, design thinking activities in
-                collaboration with other campus organizations, design hackathons and more.
-                Our biggest event is RAW Expo, in which organizations and individuals
-                showcase their design work and design process at the end of the year.
+                <div class="narrative__title">experience</div>
+                is for people who want to shape the design experience of the
+                Cornell community. You'll design events that make people think,
+                whether that be bringing in speakers, organizing workshops, or
+                building popups. Experience can be physical, digital, or conceptual.
+                you'll be working with Miriam.
             </div>
         </div>
     </div>
     <div class="narrative__wrap">
-        <div class="narrative__img narrative__left" style="background-image: url('{% static 'imgs/design.jpg' %}');"></div>
+        <div class="narrative__img narrative__left" style="background-image: url('{% static 'imgs/design.jpg' %}');">
+        </div>
         <div class="narrative__text-wrap right">
             <div class="narrative__text">
-                <div class="narrative__title">publication.</div>
-                Medium Design Review is a magazine that is released at RAW Expo.
-                The magazine aims to be a reflection of and dialogue on design work
-                and design culture. The Design Review is a pulse of the design
-                community both at Cornell, and in the design industry.
+                <div class="narrative__title">curation</div>
+                is for people who want to show the world what we're up to. there
+                is both an editorial component and a web component, so apply if
+                you are interested in either. On the editorial side, you'll
+                create a couple of editorial pieces. On the web side, you'll help
+                maintain our website and build a new platform to show off our
+                members' work (including yours). You'll be working with David.
             </div>
         </div>
     </div>
     <div class="narrative__wrap">
-        <div class="narrative__img narrative__right" style="background-image: url('{% static 'imgs/web.jpg' %}');"></div>
+        <div class="narrative__img narrative__right" style="background-image: url('{% static 'imgs/web.jpg' %}');">
+        </div>
         <div class="narrative__text-wrap left">
             <div class="narrative__title"></div>
             <div class="narrative__text">
-                <div class="narrative__title">web.</div>
-                The web team is responsible for maintaining Medium’s
-                site. Members of the web team learn how
-                to build and deploy web apps in Python, as well as
-                become proficient with Unix environments, version
-                control, front end web development, and UI + UX design.
-            </div>
-        </div>
-    </div>
-    <div class="narrative__wrap">
-        <div class="narrative__img narrative__left" style="background-image: url('{% static 'imgs/workshop.jpg' %}');"></div>
-        <div class="narrative__text-wrap right">
-            <div class="narrative__title"></div>
-            <div class="narrative__text">
-                <div class="narrative__title">workshops.</div>
-                Throughout the semester, we host workshops that teach design skill
-                development. Our Education team teaches Adobe Photoshop, Illustrator,
-                and InDesign every year. In addition, the team hosts additional workshops,
-                such as digital art, visual communication, and animation, depending on interest.
+                <div class="narrative__title">graphic communication</div>
+                attempts to answer the need for a graphic design course at Cornell.
+                Members will work on prompt-led projects and meet to discuss/participate
+                in critiques. Commission work is also occasionally available.
+                GC is an experiment, an exploration, (and a place to build portfolios,
+                fingers crossed). Try to have fun, though. You'll be working with Marc.
             </div>
         </div>
     </div>
