added application link

--- a/static/html/sections/index.html
+++ b/static/html/sections/index.html
@@ -13,6 +13,7 @@
     <div class="fullscreen-background__overlay"></div>
     <div class="fullscreen-background__text">
         <h1 class="unselectable">medium design collective</h1>
+        <a href="https://forms.gle/UkSiACqYpBcnD5uy9"> apply here!</a>
     </div>
 </div>
 <!-- <div class="narrative">
