--- a/static/html/sections/rawexpo.html
+++ b/static/html/sections/rawexpo.html
@@ -6,7 +6,7 @@
 <div class="raw">
 	<div class="header section fullscreen-background">
 	  <video autoplay loop muted class="fullscreen-background__video">
-	      <source src="{% static 'imgs/raw/rawgif.mov' %}">
+	      <source src="{% static 'imgs/raw/decLaunch.mov' %}">
 	  </video>
 	</div>
 
@@ -21,7 +21,7 @@
 				</span>
 			</div>
 			<div class="col-md-10" style="position: relative;">
-				MILSTEIN HALL
+				<a href = "https://fb.me/e/fuiskzFLz">FACEBOOK</a> and <a href = "http://cglink.me/r888898">CAMPUS GROUPS</a>
 				<div class="about__text__line"></div>
 			</div>
 		</div>
@@ -33,7 +33,7 @@
 				</span>
 			</div>
 			<div class="col-md-10">
-				FRIDAY, 4/26/2019, 7-9PM
+				WEDNESDAY - SATURDAY, 12/09 @ 4PM ET - 12/12 @ 3PM ET
 				<div class="about__text__line"></div>
 			</div>
 		</div>
@@ -44,31 +44,30 @@
 
 			</div>
 			<div class="col-md-10">
-				RAW Expo is an interactive space connecting attendees with organizations, project teams, and
-				creators all across Cornell campus. This year, we are focusing on the human sensory experience and
-				how the five senses are incorporated into the creative process.
+				Join us for Medium Design Collective's December Launch event, a four day 
+				series of showcases, workshops, and panels. See the schedule below!
 			</div>
 		</div>
 		</div>
 
 
 	<div class="senses section">
-		<h1>The V Senses</h1>
+		<!-- <h1>December</h1>
 		<p>The human experience is shaped by our senses, the tools we use to perceive information from the world,
 			allowing us to process, and then respond. As designers and creators, or even more broadly, problem-solvers,
-			we must focus on designing solutions that appeal to and interact with each of our senses. </p>
+			we must focus on designing solutions that appeal to and interact with each of our senses. </p> -->
 		<div class="senses__imgs">
-			<img src="{% static 'imgs/raw/Raw-Ear.jpg' %}" style=" border-left: 10px white solid;" class="img-fluid"/>
-			<img src="{% static 'imgs/raw/Raw-Eyes.jpg' %}" class="img-fluid"/>
-			<img src="{% static 'imgs/raw/Raw-Hand.jpg' %}" class="img-fluid"/>
-			<img src="{% static 'imgs/raw/Raw-Mouth.jpg' %}" class="img-fluid"/>
-			<img src="{% static 'imgs/raw/Raw-Nose.jpg' %}" class="img-fluid"/>
+			<img src="{% static 'imgs/raw/3.png' %}" class="img-fluid" style="margin-bottom: 5%;"/>
+			<img src="{% static 'imgs/raw/4.png' %}" class="img-fluid" style="margin-bottom: 5%;"/>
+			<img src="{% static 'imgs/raw/5.png' %}" class="img-fluid"/>
+			<img src="{% static 'imgs/raw/6.png' %}" class="img-fluid"/>
+			<!-- <img src="{% static 'imgs/raw/Raw-Nose.jpg' %}" class="img-fluid"/> -->
 		</div>
 
 
 		</div>
 
-	<div id="chart" class="bubbles section">
+	<!-- <div id="chart" class="bubbles section">
 		<div id="instructions1"> pop a bubble </div>
 		<div id="instructions2"> see what orgs are coming </div>
 		<canvas></canvas>
@@ -93,7 +92,7 @@
 				</div>
 			</div>
 
-	</div>
+	</div> -->
 
 
 	<div class="medium section">
