added teams websites

--- a/static/html/sections/teams.html
+++ b/static/html/sections/teams.html
@@ -21,6 +21,11 @@
                 and team itself are up to you. You'll be supported by our design
                 director Sheri to flesh out ideas, stay on track, and get any
                 other help you'll need.
+
+                <br>
+                <br>
+
+                Check out incubates' work <a href="https://www.mediumincubates.com/">here</a>.
             </div>
         </div>
     </div>
@@ -50,6 +55,12 @@
                 create a couple of editorial pieces. On the web side, you'll help
                 maintain our website and build a new platform to show off our
                 members' work (including yours). You'll be working with David.
+
+                <br>
+                <br>
+
+                Check out our editorial <a href="https://issuu.com/cornellmediumeditorial/docs/mediumwinter2020final">here</a>.
+
             </div>
         </div>
     </div>
@@ -65,6 +76,11 @@
                 in critiques. Commission work is also occasionally available.
                 GC is an experiment, an exploration, (and a place to build portfolios,
                 fingers crossed). Try to have fun, though. You'll be working with Marc.
+                
+                <br>
+                <br>
+
+                Check out graphic communication's work <a href="https://geecee.cargo.site/">here</a>.
             </div>
         </div>
     </div>
